--- a/web/resources/static/css/base.css
+++ b/web/resources/static/css/base.css
@@ -43,7 +43,18 @@ a {
     padding: 14px 16px;
     color: #f2f2f2;
 }
+    /*
+    *a:hover {
+    *       color: red;
+    *}
+    */
 
-a:hover {
-    color: red;
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #333;
+    color: white;
+    text-align: center;
 }
