Change changelog page to general download page

--- a/web/resources/static/css/base.css
+++ b/web/resources/static/css/base.css
@@ -1,6 +1,6 @@
 /*
  * Developed as part of the Cramolith project.
- * This file was last modified at 2/6/21, 6:05 PM.
+ * This file was last modified at 3/6/21, 5:11 PM.
  * Copyright 2021, see git repository at git.angm.xyz for authors and other info.
  * This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
  */
@@ -37,17 +37,13 @@ nav {
     font-size: 17px;
 }
 
-a {
+nav > a {
     float: left;
     text-decoration: none;
     padding: 14px 16px;
     color: #f2f2f2;
 }
-    /*
-    *a:hover {
-    *       color: red;
-    *}
-    */
+
 footer {
     position: fixed;
     left: 0;
