--- a/web/resources/static/css/download.css
+++ b/web/resources/static/css/download.css
@@ -1,6 +1,6 @@
 /*
  * Developed as part of the Cramolith project.
- * This file was last modified at 2/6/21, 6:05 PM.
+ * This file was last modified at 3/6/21, 5:17 PM.
  * Copyright 2021, see git repository at git.angm.xyz for authors and other info.
  * This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
  */
@@ -14,4 +14,14 @@ ul {
 
 span.date {
     font-weight: bold;
+}
+
+.date > a {
+    text-decoration: none;
+    color: #281f1f;
+}
+
+.date > a:hover {
+    text-decoration: none;
+    color: #a73030;
 }
